--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <figure>
         <img src="./images/photo3.jpg" width="270" height="260" alt="Marketer"
         <figcaption>
-            <h4>John Doe</h4>
+            <h4>John Doee</h4>
             <p>Marketing</p>
         </figcaption>
     </figure>
