--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>    
+    <title>WebStudio</title>    
 </head> 
 <body>
 <header>
         <nav><a href="/">Web<span>Studio</span></a></nav>
-       
-        <nav>
-            <a href="/link">Agencja</a>
-            <a href="/portfolio">Portfolio</a>
-            <a href="/kontakt">Kontakt</a>
+            <ul>
+            <li><a href="/link">Agencja</a > </li>
+            <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/kontakt">Kontakt</a></li>
+            </ul>
         </nav>
 
        <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a></ul> 
@@ -82,7 +82,7 @@
     <figure>
         <img src="./images/photo3.jpg" width="270" height="260" alt="Marketer"
         <figcaption>
-            <h4>John Doee</h4>
+            <h4>John Doe</h4>
             <p>Marketing</p>
         </figcaption>
     </figure>
@@ -103,7 +103,7 @@
     <a href="/">Web<span>Studio</span></a>
         <address>
         <ul>
-        <li><p>m. Warszawa, Aleje Jerozolimskie 21</p></li>
+        <li><p>m. Warszawa, Aleje Jerozolimskie 21</li>
         <li><a href="mailto:info@example.com">info@example.com</a> <br></li>
         <li><a href="tel+48 111 111 111">+48 111 111 111</a></li>
         </ul>    
