--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head> 
 <body>
 <header>
-        <nav><a href="/">Web<span>Studio</span></a></nav>
+        <nav><a href="/">Web<span>Studio</span></a>
             <ul>
             <li><a href="/link">Agencja</a > </li>
             <li><a href="/portfolio">Portfolio</a></li>
@@ -17,8 +17,8 @@
             </ul>
         </nav>
 
-       <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a></ul> 
-        <ul><a href="tel+48 111 111 111">+48 111 111 111</a></ul>
+       <ul><li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel+48 111 111 111">+48 111 111 111</a></li></ul>
         
 </header>
 <main>
@@ -103,8 +103,8 @@
     <a href="/">Web<span>Studio</span></a>
         <address>
         <ul>
-        <li><p>m. Warszawa, Aleje Jerozolimskie 21</li>
-        <li><a href="mailto:info@example.com">info@example.com</a> <br></li>
+        <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
         <li><a href="tel+48 111 111 111">+48 111 111 111</a></li>
         </ul>    
         </address>
